--- a/lab9/pom.xml
+++ b/lab9/pom.xml
@@ -16,8 +16,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <build>
-        <sourceDirectory>LLRBs</sourceDirectory>
-        <testSourceDirectory>LLRBs</testSourceDirectory>
+        <sourceDirectory>${project.basedir}</sourceDirectory>
+        <testSourceDirectory>${project.basedir}</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -47,6 +47,12 @@
             <artifactId>truth</artifactId>
             <version>1.1.3</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.truth</groupId>
+            <artifactId>truth</artifactId>
+            <version>1.1.3</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
